# SLStudio

./: .cache-aaronopp  .classpath  .editorconfig  .gitattributes  .gitignore  .gitmodules  .layout  .lfsconfig  .lxproject  .project  .show  01-waltz.sh  02-clare.sh  21) 18 Years : With Or Without You.lxp  21pilots  5-22.lxp  ABSITHE DAILY  AlexHSO2WaspsNoise  AlexMondayNightFlockWaveCycle2.lxp  AlexProject.lxp  Battleships.lxp  ButterflyReceiver.java.processing  CubesLayout.java  DaftPunk  EDITING FOR BRIAN TO SHOOT VIDEOroject.lxp  Go Down.lxp  LICENSE  ParamCrossSections.java  README.md  SLStudio.sublime-project  SugarCubes.sublime-project  Sun7PixliteConfig.pde  TUESDAY_10.50_INTERMISSION  TUESDAY_9AM_INTERMISSION  Test.lxp  WEDNES_11AM_INTERMISSION  WEDNES_9AM_INTRO  ai_vj.lxp  alexmapping.lxp  alexnissan.lxp  (+64 more)
AI_VJ/: Data_preprocessing_may_2018.ipynb  Untitled.ipynb  data_exploration_sandbox.ipynb  data_generation.py  data_generation.py.bak  data_generation_w_spotify.py  data_generation_w_spotify.py.bak  data_preprocessing.py  requirements.txt  run.py  run.py.bak  run_with_toggle.py  server.py  (+9 more)
slimgui/: CMakeLists.txt  build.gradle  gradle.properties  settings.gradle  update-imgui.sh
slimgui/src/: com_symmetrylabs_slstudio_ui_UI.h  com_symmetrylabs_slstudio_ui_gdx_UI.h  slimgui.cpp
slimgui/src/main/cpp/: com_symmetrylabs_slstudio_ui_gdx_UI.h  com_symmetrylabs_slstudio_ui_v2_UI.h  gl3w.c  gl3w.cpp  handle.hpp  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_impl_opengl2.cpp  imgui_widgets.cpp  jniutils.hpp  slimgui.cpp  widgets_symmetry.cpp  widgets_symmetry.h
(+3860 files in other folders)
